@@ -51,6 +51,7 @@ import org.dspace.app.webui.util.JSPManager;
 import org.dspace.app.webui.util.UIUtil;
 import org.dspace.authorize.AuthorizeException;
 import org.dspace.authorize.AuthorizeManager;
+import org.dspace.browse.Browse;
 import org.dspace.content.Collection;
 import org.dspace.content.Item;
 import org.dspace.content.ItemIterator;
@@ -270,6 +271,7 @@ public class ItemMapServlet extends DSpaceServlet
                 if (!myItem.isOwningCollection(myCollection))
                 {
                     myCollection.removeItem(myItem);
+                    Browse.itemChanged(context,myItem);
                 }
             }
 
@@ -310,7 +312,8 @@ public class ItemMapServlet extends DSpaceServlet
                         if (!myItem.isOwningCollection(myCollection))
                         {
                             myCollection.addItem(myItem);
-			    addedItems.add(itemIDs[j]);
+                            Browse.itemChanged(context,myItem);
+                            addedItems.add(itemIDs[j]);
                         }
                     }
                 }
